# ROjal_MQTT_Client

./: .gitignore  CMakeLists.txt  build.sh  doxygen.cnf  readme.md
FreeRTOS_example/: ROjal_MQTT_README.txt
FreeRTOS_example/FreeRTOS-Plus/Demo/FreeRTOS_Plus_TCP_and_FAT_Windows_Simulator/: FreeRTOSConfig.h
FreeRTOS_example/FreeRTOS-Plus/Demo/FreeRTOS_Plus_TCP_and_FAT_Windows_Simulator/DemoTasks/: TCPEchoClient_SeparateTasks.c
include/: mqtt.h  mqtt_adaptation.h
src/: mqtt.c
test/: CMakeLists.txt
test/cmdline/: cmdline.c
test/empty/: empty.c
test/fixed_header/: test_mqtt_fixed_header_decode.c  test_mqtt_fixed_header_encode.c
test/help/: help.c  help.h
test/mqtt_connect/: CMakeLists.txt  test_mqtt_connect_simple.c  test_mqtt_connect_simple_keepalive_rojal_mqtt.c  test_mqtt_connect_simple_raw.c  test_mqtt_connect_simple_rojal_mqtt.c
test/mvp/: CMakeLists.txt  mvp_help.c  mvp_test.c  mvp_test_connect.c  mvp_test_publish.c  mvp_test_pubsub.c  mvp_test_subscribe.c
test/prod/: CMakeLists.txt  prod_help.c  prod_test.c  prod_test_connect.c  prod_test_publish.c  prod_test_pubsub.c  prod_test_subscribe.c
test/socket_read_write_lib/: socket_read_write.c
test/statemaschine/: CMakeLists.txt  test_statemaschine.c  test_statemaschine_connect_a.c  test_statemaschine_connect_b.c  test_statemaschine_connect_keepalive.c  test_statemaschine_publish.c  test_statemaschine_pubsub.c  test_statemaschine_subscribe.c
test/variable_header/: test_mqtt_variable_header_decode.c
